vse group strips expanding in length on cancelled movement #101098

Closed
opened 2022-09-15 18:48:40 +02:00 by paperbenni · 10 comments

System Information
Operating system: Linux-5.19.8-arch1-1-x86_64-with-glibc2.36 64 Bits
Graphics card: NVIDIA GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 515.65.01

Blender Version
Broken: version: 3.3.1 Release Candidate, branch: master, commit date: 2022-09-12 18:27, hash: 19ae71c113
broken in 3.4.0 as well

Short description of error

Peek 2022-09-15 18-42.mp4

Cancelling movement on a group strip in the VSE makes it expand in length. This does not happen every time but in a solid 40% of cases, with bigger movements increasing the likelihood.

Exact steps for others to reproduce the error

  1. open new file with video editing template
  2. create color (or other) strip
  3. ctrl+g it into a grouped strip
  4. start movement with g, wiggle mouse around
  5. cancel movement with right mouse button
**System Information** Operating system: Linux-5.19.8-arch1-1-x86_64-with-glibc2.36 64 Bits Graphics card: NVIDIA GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 515.65.01 **Blender Version** Broken: version: 3.3.1 Release Candidate, branch: master, commit date: 2022-09-12 18:27, hash: `19ae71c113` broken in 3.4.0 as well **Short description of error** [Peek 2022-09-15 18-42.mp4](https://archive.blender.org/developer/F13496300/Peek_2022-09-15_18-42.mp4) Cancelling movement on a group strip in the VSE makes it expand in length. This does not happen every time but in a solid 40% of cases, with bigger movements increasing the likelihood. **Exact steps for others to reproduce the error** 1. open new file with video editing template 2. create color (or other) strip 3. ctrl+g it into a grouped strip 4. start movement with g, wiggle mouse around 5. cancel movement with right mouse button

Added subscriber: @paperbenni

Added subscriber: @paperbenni

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

Can't reproduce the issue here. Can you upload .blend file?

Can't reproduce the issue here. Can you upload .blend file?

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'

Sorry, I was testing in 2.93.. Can reproduce in 3.4.

Sorry, I was testing in 2.93.. Can reproduce in 3.4.

This is caused by clamping handle translation to strip bounds, but the issue is, that if both handles are moved and step is bigger than strip length, it will fail.

Since function SEQ_time_update_meta_strip_range() is still needed, it would be possible to inline part of SEQ_time_*_handle_frame_set() without clamping. problem is, that this will happen at every place where both handles are moved at the same time, so in SEQ_transform_translate_sequence() as well. Flag to skip clamping could be implemented, but I don't quite like such flags. Also would violate my principle, that API functions should not result in invalid state.

So solution could be to have function that translates one or both handles. This way it would be possible to skip clamping if both handles are moved. Also it would clean up code where handle_set(seq, handle_get(seq) + x) is used as such code is not best to read.

As bugfix, I will implement SEQ_time_translate_handles() for both handles at once, this can be backported to LTS, and then will look at code if I see only one handle being moved, so I can add enum for SEQ_time_translate_handles() to select which handle.

This is caused by clamping handle translation to strip bounds, but the issue is, that if both handles are moved and step is bigger than strip length, it will fail. Since function `SEQ_time_update_meta_strip_range()` is still needed, it would be possible to inline part of `SEQ_time_*_handle_frame_set()` without clamping. problem is, that this will happen at every place where both handles are moved at the same time, so in `SEQ_transform_translate_sequence()` as well. Flag to skip clamping could be implemented, but I don't quite like such flags. Also would violate my principle, that API functions should not result in invalid state. So solution could be to have function that translates one or both handles. This way it would be possible to skip clamping if both handles are moved. Also it would clean up code where `handle_set(seq, handle_get(seq) + x)` is used as such code is not best to read. As bugfix, I will implement `SEQ_time_translate_handles()` for both handles at once, this can be backported to LTS, and then will look at code if I see only one handle being moved, so I can add enum for `SEQ_time_translate_handles()` to select which handle.

This issue was referenced by 41527ea89c

This issue was referenced by 41527ea89c7ab99737c8ba598f649d20bd7df972

This issue was referenced by d4a763d363

This issue was referenced by d4a763d363f14ae4de9411652d3556df2abcce21

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Richard Antalik self-assigned this 2022-09-17 04:25:33 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#101098
There is no content yet.